# ViennaRNA

./: .cvsignore  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  COPYING  ChangeLog  Design.pm  Energy.h  Files.pm  INSTALL  INSTALL.in  MANIFEST.in  Makefile  Makefile.am  Makefile.libsvm  Makefile.standalone  NEWS  Params.pm  README  README.in  README.md  RNAlib2.pc.in  RNAlocmin.1  RNAlocmin.ggo  Reliability.pm  THANKS  ViennaRNA.spec  ViennaRNA.spec.in  acinclude.m4  aclocal.m4  aminclude.am  autogen.sh  barrier_tree.cpp  config.h.bot  config.h.in  configure.ac  (+35 more)
Cluster/: .cvsignore  .gitignore  AD_main.c  AS_main.c  AnalyseDists.1  AnalyseSeqs.1  Makefile  Makefile.am  PS3D.c  StrEdit_CostMatrix.h  cluster.c  distance_matrix.c  distance_matrix.h  randseq.c  split.c  split.h  statgeom.c  statgeom.h  treeplot.c  treeplot.h  utils.h
H/: 2Dfold.h  2Dpfold.h  LPfold.h  Lfold.h  MEA.h  Makefile.am  PKplex.h  PS_dot.h  ProfileAln.h  ProfileDist.h  RNAstruct.h  ali_plex.h  alifold.h  aln_util.h  cofold.h  constraints.h  convert_epars.h  data_structures.h  dist_vars.h  duplex.h  edit_cost.h  energy_const.h  energy_par.h  eval.h  findpath.h  fold.h  fold_vars.h  gquad.h  inverse.h  loop_energies.h  mm.h  move_set.h  naview.h  pair_mat.h  params.h  part_func.h  part_func_co.h  part_func_up.h  plex.h  plot_layouts.h  (+10 more)
Perl/: .cvsignore  .gitignore  Makefile.PL  Makefile.PL.in  Makefile.am  RNA.i  RNA.pod  RNAbatch.pl  RNAfold.cgi  RNAfold.pl  RNAfold_new.cgi  ptr2array.i  test.pl  tmaps.i
Progs/: .cvsignore  .gitignore  Makefile  Makefile.am  PKplex.c  PKplex.ggo  RNA2Dfold.c  RNA2Dfold.ggo  RNALalifold.c  RNALalifold.ggo  RNALfold.c  RNALfold.ggo  RNALfoldz.c  RNALfoldz.ggo  RNAPKplex.c  RNAPKplex.ggo  RNAaliduplex.c  RNAaliduplex.ggo  RNAalifold.c  RNAalifold.ggo  RNAcofold.c  RNAcofold.ggo  RNAdistance.c  RNAdistance.ggo  RNAduplex.c  RNAduplex.ggo  RNAeval.c  RNAeval.ggo  RNAfold.c  RNAfold.examples  RNAfold.ggo  RNAheat.c  RNAheat.ggo  RNAinverse.c  RNAinverse.ggo  RNApaln.c  RNApaln.ggo  RNAparconv.c  RNAparconv.ggo  RNApdist.c  (+13 more)
RNA-Tutorial/: .gitignore  Makefile.am  Makefile.standalone  pgfsys-tex4ht.def  tutorial.cfg  tutorial.tex
RNA-Tutorial/Data/: 5S.seq  RNaseP.dnd  RNaseP.seq  RybB.seq  dot.emacs  duplex.seq  duplex2.seq  four.seq  test.const
Utils/: .cvsignore  Fold  Makefile  Makefile.am  README  b2ct.c  b2mt.pl  cmount.pl  coloraln.pl  ct2db.c  dpzoom.pl  mountain.pl  refold.pl  relplot.pl  rotate_ss.pl  switch.pl
doc/: .gitignore  Makefile.am  conf.py.in  doxygen.conf.in  file_formats.dox  mainpage.dox  mainpage.h  man2rst.py  requirements.txt  rtd_environment.yaml  viennarna.bib
examples/: Makefile.am  callback_subopt.c  example1.c  example1.pl  example1.py  example_old.c  fold_compound_md.c  fold_compound_mfe.c  helloworld_mfe.c  helloworld_mfe_comparative.c  helloworld_probabilities.c  maximum_matching.py  soft_constraints_up.c  subopt.py
interfaces/: .gitignore  Makefile.am  RNA.i  RNAxplorer.i  aln_utils.dox  aln_utils.i  backtrack.i  barrier_lower_bound.i  basic_algorithms.dox  basic_algorithms.i  boltzmann_sampling.dox  boltzmann_sampling.i  classify.csv  classify.txt  combinatorics.dox  combinatorics.i  commands.dox  commands.i  compare.i  concentrations.dox  concentrations.i  constraints.i  constraints_SHAPE.dox  constraints_SHAPE.i  constraints_hard.dox  constraints_hard.i  constraints_ligand.dox  constraints_ligand.i  constraints_mod.i  constraints_probing.dox  constraints_probing.i  constraints_soft.dox  constraints_soft.i  data.i  data_structures.i  distorted_sampling.i  distorted_samplingMD.i  dp_matrices.i  duplex.i  essentials.i  (+57 more)
lib/: .cvsignore  1.8.4_epars.h  1.8.4_intloops.h  2Dfold.c  2Dpfold.c  LPfold.c  Lfold.c  MEA.c  Makefile  Makefile.am  PS_dot.c  ProfileAln.c  ProfileDist.c  RNAstruct.c  aliLfold.c  ali_plex.c  alicircfold.inc  alifold.c  alipfold.c  aln_util.c  c_plex.c  circfold.inc  cofold.c  constraints.c  convert_epars.c  dist_vars.c  duplex.c  energy_par.c  eval.c  findpath.c  fold.c  fold_vars.c  gquad.c  intl11.h  intl11dH.h  intl21.h  intl21dH.h  intl22.h  intl22dH.h  intloops.h  (+24 more)
man/: .cvsignore  .gitignore  Makefile.am  PKplex.1  RNALfold.1.in  RNAaliduplex.1.in  RNAalifold.1.in  RNAcofold.1.in  RNAdistance.1.in  RNAduplex.1.in  RNAeval.1.in  RNAfold.1.in  RNAforester.1  RNAheat.1.in  RNAinverse.1.in  RNAlib.texi  RNAlib.texinfo  RNApaln.1.in  RNApdist.1.in  RNAplfold.1.in  RNAplot.1.in  RNAsubopt.1.in  RNAup.1.in  cmdlopt.sh  cmdlopt.sh.in  help2man  help2manWrapper.sh  kinwalker.1
misc/: .gitignore  2Dlandscape.R  2Dlandscape_mfe.gri  2Dlandscape_pf.gri  Makefile.am  PKGBUILD.in  ViennaRNA.spec.in  dna_mathews1999.par  dna_mathews2004.par  parameter_files.txt  prior_probing_1M7_paired.data  prior_probing_1M7_unpaired.data  prior_probing_DMS_paired.data  prior_probing_DMS_unpaired.data  probing_data_files.txt  rna_andronescu2007.par  rna_langdon2018.par  rna_misc_special_hairpins.par  rna_mod_7DA_parameters.json  rna_mod_dihydrouridine_parameters.json  rna_mod_inosine_parameters.json  rna_mod_m5C_parameters.json  rna_mod_m6A_parameters.json  rna_mod_n1methylpseudouridine_parameters.json  rna_mod_pseudouridine_parameters.json  rna_mod_purine_parameters.json  rna_mod_template_parameters.json  rna_turner1999.par  rna_turner2004.par  uncrustify.cfg  win_installer_i686.nsi  win_installer_x86_64.nsi
src/: .gitignore  Makefile.am  PathFinder.h  RNAwalk.c  RNAwalk.h  RNAxplorer.ggo  algebra.h  aligner.cpp  alignment.h  barrier_lower_bound.h  distorted_samplingMD.c  forestbase.cpp  parser.h  rna_alignment.h  rna_alphabet.cpp  rna_alphabet.h  rna_profile_alignment.cpp  rna_profile_alignment.h  rnaforest.cpp  rnafuncs.h
tests/: .gitignore  Makefile.am  RNAHelpers.pm.in  RNApath.pm  RNApath.pm.in  RNApath.py.in  check_check_main.c  check_constraints.c  check_fold.c  check_loop_energies.c  check_utils.c  constraints.ts  constraints_soft.ts  energy_evaluation.ts  ensemble_defect.ts  eval_structure.ts  fold.ts  hash_table.ts  neighbor.ts  test-env.sh.in  utils.ts  walk.ts
(+2483 files in other folders)
