pkginclude_HEADERS = energy_par.h pair_mat.h RNAstruct.h dist_vars.h \
	fold.h part_func.h stringdist.h edit_cost.h fold_vars.h \
	profiledist.h treedist.h energy_const.h inverse.h PS_dot.h \
	utils.h params.h subopt.h cofold.h duplex.h alifold.h aln_util.h \
	part_func_co.h ProfileAln.h

EXTRA_DIST = $(pkginclude_HEADERS)
