if WITH_LIBSVM
  SVM_UTILS_H = svm_utils.h
endif

pkginclude_HEADERS = energy_par.h pair_mat.h RNAstruct.h dist_vars.h \
	fold.h part_func.h stringdist.h edit_cost.h fold_vars.h \
	profiledist.h treedist.h energy_const.h inverse.h PS_dot.h \
	utils.h params.h subopt.h cofold.h duplex.h alifold.h aln_util.h \
	part_func_co.h ProfileAln.h LPfold.h Lfold.h part_func_up.h ribo.h \
	findpath.h loop_energies.h data_structures.h MEA.h mm.h \
	naview.h 2Dfold.h 2Dpfold.h read_epars.h convert_epars.h PKplex.h\
	plot_layouts.h ali_plex.h plex.h snofold.h snoop.h move_set.h\
	gquad.h ${SVM_UTILS_H}

EXTRA_DIST = $(pkginclude_HEADERS)
